[package]
name = "datapack"
version.workspace = true
edition.workspace = true

[dependencies]
ahash.workspace = true
dashmap.workspace = true
datapack_macros = { path = "../datapack_macros" }
glam.workspace = true
num.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
util = { path = "../util" }
zip.workspace = true

[features]
exhaustive_enums = []
